# tacotron2-from-scratch

./: .gitignore  dataprep.ipynb  dataset.py  melspecs.ipynb  model.py  precompute_mels.py  pyproject.toml  train.py
hifigan/: models.py
