[project]
name = "tacotron2-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "env>=0.1.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.1",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "ruff>=0.15.10",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchcodec>=0.11.0",
    "torchinfo>=1.8.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
]
torchcodec = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu",   marker = "sys_platform != 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
